; ModuleID = '/home/carl/AnghaBench/nginx-rtmp-module/extr_ngx_rtmp_log_module.c_ngx_rtmp_log_var_context_cstring_getdata.c'
source_filename = "/home/carl/AnghaBench/nginx-rtmp-module/extr_ngx_rtmp_log_module.c_ngx_rtmp_log_var_context_cstring_getdata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@ngx_rtmp_log_module = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64* (i32*, i64*, %struct.TYPE_3__*)* @ngx_rtmp_log_var_context_cstring_getdata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64* @ngx_rtmp_log_var_context_cstring_getdata(i32* %0, i64* %1, %struct.TYPE_3__* %2) #0 {
  %4 = alloca i64*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64*, align 8
  store i32* %0, i32** %5, align 8
  store i64* %1, i64** %6, align 8
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* @ngx_rtmp_log_module, align 4
  %12 = call i32* @ngx_rtmp_get_module_ctx(i32* %10, i32 %11)
  store i32* %12, i32** %8, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = load i64*, i64** %6, align 8
  store i64* %16, i64** %4, align 8
  br label %37

17:                                               ; preds = %3
  %18 = load i32*, i32** %8, align 8
  %19 = bitcast i32* %18 to i64*
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i64, i64* %19, i64 %23
  store i64* %24, i64** %9, align 8
  br label %25

25:                                               ; preds = %29, %17
  %26 = load i64*, i64** %9, align 8
  %27 = load i64, i64* %26, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %35

29:                                               ; preds = %25
  %30 = load i64*, i64** %9, align 8
  %31 = getelementptr inbounds i64, i64* %30, i32 1
  store i64* %31, i64** %9, align 8
  %32 = load i64, i64* %30, align 8
  %33 = load i64*, i64** %6, align 8
  %34 = getelementptr inbounds i64, i64* %33, i32 1
  store i64* %34, i64** %6, align 8
  store i64 %32, i64* %33, align 8
  br label %25

35:                                               ; preds = %25
  %36 = load i64*, i64** %6, align 8
  store i64* %36, i64** %4, align 8
  br label %37

37:                                               ; preds = %35, %15
  %38 = load i64*, i64** %4, align 8
  ret i64* %38
}

declare dso_local i32* @ngx_rtmp_get_module_ctx(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
